Fix invoice / description alignment.

--- a/src/css/components/footer-bar.styl
+++ b/src/css/components/footer-bar.styl
@@ -8,7 +8,7 @@
   transition left 350ms ease-out
   vertical-align middle
   text-align center
-  z-index 500
+  z-index 1000
   min-height: 60px
 
   .login-button
